--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -17,12 +17,13 @@
         <li class="snav-titulo">
           <button type="button" class="snav-collapse">
             <span class="align-middle">Front-end</span>
-            <mat-icon aria-hidden="false" class="seta">keyboard_arrow_right</mat-icon>
+            <mat-icon aria-hidden="false" class="seta"
+              >keyboard_arrow_right</mat-icon
+            >
           </button>
         </li>
         <div class="content">
-          <a routerLink='/javascript' class="snav-item">Javascript</a>
-          <a routerLink='/' class="snav-item">Typescript (teste)</a>
+          <a routerLink="/javascript" class="snav-item">Javascript</a>
         </div>
       </ul>
 
@@ -31,12 +32,14 @@
         <li class="snav-titulo">
           <button type="button" class="snav-collapse">
             <span class="align-middle">Back-end</span>
-            <mat-icon aria-hidden="false" class="seta">keyboard_arrow_right</mat-icon>
+            <mat-icon aria-hidden="false" class="seta"
+              >keyboard_arrow_right</mat-icon
+            >
           </button>
         </li>
         <div class="content">
-          <a routerLink='/php' class="snav-item">PHP</a>
-          <a routerLink='/node' class="snav-item">Node</a>
+          <a routerLink="/php" class="snav-item">PHP</a>
+          <a routerLink="/node" class="snav-item">Node</a>
         </div>
       </ul>
 
@@ -45,11 +48,14 @@
         <li class="snav-titulo">
           <button type="button" class="snav-collapse">
             <span class="align-middle">Outros</span>
-            <mat-icon aria-hidden="false" class="seta">keyboard_arrow_right</mat-icon>
+            <mat-icon aria-hidden="false" class="seta"
+              >keyboard_arrow_right</mat-icon
+            >
           </button>
         </li>
         <div class="content">
-            <a routerLink='/wordpress' class="snav-item">Wordpress</a>
+          <a routerLink="/wordpress" class="snav-item">Wordpress</a>
+          <a routerLink="/ciencia-de-dados" class="snav-item">Dados</a>
         </div>
       </ul>
 
