--- a/src/general.scss
+++ b/src/general.scss
@@ -7,6 +7,12 @@ h6 {
   margin: 8px 0;
 }
 
+h1 {
+  text-align: center;
+  font-size: 1.8;
+  font-weight: 600;
+}
+
 html,
 body {
   margin: 0;
@@ -39,7 +45,7 @@ pre {
 }
 
 @media (min-width: 1200px) {
-  .container { 
+  .container {
     max-width: 100% !important;
   }
 }
