--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -1,7 +1,14 @@
+.mat-drawer {
+  margin-top: 64px;
+}
+
+.mat-drawer-container {
+  position: inherit;
+}
+
 .example-container {
   display: flex;
   flex-direction: column;
-  position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
